Add topic and sub

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Ukrit Nhukangs</h1>
+    <h2>About me</h2>
+    <p>Hello my nickname Ice and I'm student</p>
 </body>
 </html>
