--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Ukrit Nhukangs</h1>
     <h2>About me</h2>
     <p>Hello my nickname Ice and I'm student</p>
+    <link rel="stylesheet" href="/css/index.css">
 </body>
 </html>
